--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
+/* common css */
+
 /* container */
 .container{
     margin: 49px 157px 63px 157px;
-
-
+    
 }
 
+/* botton */
+.panda-batton{
+    border-radius: 6px;
+    background: linear-gradient(180.00deg, rgb(255, 88, 155) -0.006%,rgb(255, 19, 111) 99.994%);
+    padding: 16.5px 35px 16.5px  28px;
+    border: none;
+    color: #FEEAE9;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+/* custom css */
 
 /* Search-parent */
 .Search-parent{
+    align-items: center;
     position: relative;
     color: rgb(241, 241, 241);
 }
@@ -15,8 +29,8 @@
 .Search-parent input{
     border-radius: 66px;
     padding: 12px 30px;
-    width: 508px;
-    height: 48px;
+    width: 600px;
+    height: px;
     border: none;
     font-size: 16px ;
     background-color: rgb(241, 241, 241);
@@ -26,6 +40,9 @@
     position: absolute;
     top: 25px;
     right: 20px;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;    
     color: rgb(186, 186, 186);
 }
 
@@ -47,3 +64,47 @@ nav{
     font-size: 16px ;
     font-weight: 200;
 }
+
+/* banner */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    background-color: #FEEAE9;
+    gap: 5px;
+    align-items: center;
+    margin-top: 25px;
+    padding: 46px;
+    border-radius: 16px;
+}
+
+.banner h1{
+    color: rgb(31, 31, 31);
+    font-size: 56px;
+    font-weight: 700;
+}
+
+.banner1{
+    margin: 68px 612px 68px 46px;
+}
+
+.banner p{
+    color: rgb(78, 78, 78);
+    font-size: 16px;
+    font-weight: 400;
+    max-width: 456px;
+    max-height: 97px;
+}
+
+.banner span{
+    color: rgb(255, 19, 111);
+    font-size: 41px;
+    font-weight: 500;
+    display: block;
+    margin-bottom: 0%;
+}
+.banner img {
+    width: 402px;
+    height: 378px;
+}
+
+
